# RimeMan

./: CMakeLists.txt  README.md  getfile.hpp  main.cpp  rimedata.cpp  rimedata.hpp
